// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNP adapter can fetch features from volvox.bam using bam subadapter 1`] = `
Array [
  Object {
    "end": 1001,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 18,
        "strands": Object {
          "+": 10,
          "-": 8,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1000,
    "uniqueId": "pos_01000",
  },
  Object {
    "end": 1002,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 18,
        "strands": Object {
          "+": 10,
          "-": 8,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1001,
    "uniqueId": "pos_01001",
  },
  Object {
    "end": 1003,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 17,
        "strands": Object {
          "+": 10,
          "-": 7,
        },
      },
      Object {
        "base": "T",
        "score": 1,
        "strands": Object {
          "-": 1,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1002,
    "uniqueId": "pos_01002",
  },
  Object {
    "end": 1004,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 18,
        "strands": Object {
          "+": 10,
          "-": 8,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1003,
    "uniqueId": "pos_01003",
  },
  Object {
    "end": 1005,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 17,
        "strands": Object {
          "+": 10,
          "-": 7,
        },
      },
      Object {
        "base": "A",
        "score": 1,
        "strands": Object {
          "-": 1,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1004,
    "uniqueId": "pos_01004",
  },
  Object {
    "end": 1006,
    "refName": "ctgA",
    "score": 19,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 19,
        "strands": Object {
          "+": 10,
          "-": 9,
        },
      },
      Object {
        "base": "total",
        "score": 19,
      },
    ],
    "start": 1005,
    "uniqueId": "pos_01005",
  },
  Object {
    "end": 1007,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 17,
        "strands": Object {
          "+": 8,
          "-": 9,
        },
      },
      Object {
        "base": "A",
        "score": 2,
        "strands": Object {
          "+": 2,
        },
      },
      Object {
        "base": "T",
        "score": 1,
        "strands": Object {
          "+": 1,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1006,
    "uniqueId": "pos_01006",
  },
  Object {
    "end": 1008,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 20,
        "strands": Object {
          "+": 11,
          "-": 9,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1007,
    "uniqueId": "pos_01007",
  },
  Object {
    "end": 1009,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 19,
        "strands": Object {
          "+": 10,
          "-": 9,
        },
      },
      Object {
        "base": "T",
        "score": 1,
        "strands": Object {
          "+": 1,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1008,
    "uniqueId": "pos_01008",
  },
  Object {
    "end": 1010,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 20,
        "strands": Object {
          "+": 11,
          "-": 9,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1009,
    "uniqueId": "pos_01009",
  },
]
`;

exports[`SNP adapter can fetch features from volvox.cram using cram subadapter 1`] = `
Array [
  Object {
    "end": 1001,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 18,
        "strands": Object {
          "+": 10,
          "-": 8,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1000,
    "uniqueId": "pos_01000",
  },
  Object {
    "end": 1002,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 18,
        "strands": Object {
          "+": 10,
          "-": 8,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1001,
    "uniqueId": "pos_01001",
  },
  Object {
    "end": 1003,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 17,
        "strands": Object {
          "+": 10,
          "-": 7,
        },
      },
      Object {
        "base": "T",
        "score": 1,
        "strands": Object {
          "-": 1,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1002,
    "uniqueId": "pos_01002",
  },
  Object {
    "end": 1004,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 18,
        "strands": Object {
          "+": 10,
          "-": 8,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1003,
    "uniqueId": "pos_01003",
  },
  Object {
    "end": 1005,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 17,
        "strands": Object {
          "+": 10,
          "-": 7,
        },
      },
      Object {
        "base": "C",
        "score": 1,
        "strands": Object {
          "-": 1,
        },
      },
      Object {
        "base": "total",
        "score": 18,
      },
    ],
    "start": 1004,
    "uniqueId": "pos_01004",
  },
  Object {
    "end": 1006,
    "refName": "ctgA",
    "score": 19,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 19,
        "strands": Object {
          "+": 10,
          "-": 9,
        },
      },
      Object {
        "base": "total",
        "score": 19,
      },
    ],
    "start": 1005,
    "uniqueId": "pos_01005",
  },
  Object {
    "end": 1007,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 17,
        "strands": Object {
          "+": 8,
          "-": 9,
        },
      },
      Object {
        "base": "A",
        "score": 2,
        "strands": Object {
          "+": 2,
        },
      },
      Object {
        "base": "T",
        "score": 1,
        "strands": Object {
          "+": 1,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1006,
    "uniqueId": "pos_01006",
  },
  Object {
    "end": 1008,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 20,
        "strands": Object {
          "+": 11,
          "-": 9,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1007,
    "uniqueId": "pos_01007",
  },
  Object {
    "end": 1009,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 19,
        "strands": Object {
          "+": 10,
          "-": 9,
        },
      },
      Object {
        "base": "T",
        "score": 1,
        "strands": Object {
          "+": 1,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1008,
    "uniqueId": "pos_01008",
  },
  Object {
    "end": 1010,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Array [
      Object {
        "base": "reference",
        "score": 20,
        "strands": Object {
          "+": 11,
          "-": 9,
        },
      },
      Object {
        "base": "total",
        "score": 20,
      },
    ],
    "start": 1009,
    "uniqueId": "pos_01009",
  },
]
`;
